--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                            <h2>We want to become a llama network and have our own blockchain.</h2>
                            <h3>the people’s c r y p t o c u r r e n c y</h3>
                            <a href="#llamaista">Llamacoin Manifesto</a>
-                           <a href="#">PublicSale in PinkSale</a>
+                           <a href="https://www.pinksale.finance/launchpad/0xA570925e0E78842a4F1765cA6bDE0E42F666D3Fe?chain=FTM" target="_blank">PublicSale in PinkSale</a>
                         </div>
                      </div>
                      <div class="col-md-6">
@@ -128,7 +128,7 @@
                         <div class="business_box ">
                            <figure><img src="images\llamacoinee.png" alt="#"/></figure>
                           
-                           <a class="read_more" href="#">PinkSale Auction</a>
+                           <a class="read_more" href="https://www.pinksale.finance/launchpad/0xA570925e0E78842a4F1765cA6bDE0E42F666D3Fe?chain=FTM" target="_blank">PinkSale Auction</a>
                         </div>
                      </div>
                   </div>
