--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>©The Llamacoin Foundation & Llamacoin Project. All rights reserved.</a></p>
+                        <p>©The Llamacoin Foundation & Llamacoin Project. All rights reserved. Contact us: llamacoin@protonmail.com</a></p>
                      </div>
                   </div>
                </div>
