--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
       <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/custom.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+      <link rel="stellar.toml file" href="%PUBLIC_URL%/.well-known/stellar.toml" crossorigin="anonymous"/>
    </body>
 </html>
 
